tests/machine/x/pl/append_builtin.error
run: exit status 2
ERROR: /workspace/mochi/tests/machine/x/pl/append_builtin.pl:6: user:main is/2: Type error: `[]' expected, found `[1,2]' (a list) ("x" must hold one character)

